Fix extra space in path

--- a/css/main.css
+++ b/css/main.css
@@ -1344,7 +1344,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #ed9ec1;
+  background: #53ff36;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
